<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.main.GameLauncher.TapiocaGameLauncher">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/milktea" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play"
        android:layout_centerHorizontal="true"
        android:text="@string/button_tapioca_launcher"
        android:textColor="#000000"
        android:textSize="44sp" />

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/buttonPlay"
        android:textColor="#000000"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/highScore"
        android:textColor="#000000"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/volumeCtrl"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_volume_up_black_24dp" />

    <Button
        android:id="@+id/buttonExitTiles"
        style="?buttonSecondary"
        android:layout_width="95dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="265dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/highScoreText"
        android:onClick="exitToMenu"
        android:text="@string/button_exit"
        android:textColor="?android:attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/buttonInstructions"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/title"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="213dp"
        android:background="@android:color/transparent"
        android:text="@string/instructions"
        android:textColor="#000000"
        android:textSize="20sp"
        android:onClick="displayInstructions"/>

</RelativeLayout>