<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <TextView
        android:id="@+id/mazeTiles"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="monospace"
        android:text="@string/title_maze"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionsMaze"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:fontFamily="monospace"
        android:text="@string/instructions_maze"
        android:textAlignment="center"
        android:textColor="?android:attr/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mazeTiles" />

    <Button
        android:id="@+id/buttonPlayMaze"
        style="?buttonPrimary"
        android:layout_width="130sp"
        android:layout_height="60sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:onClick="startMazeGame"
        android:text="@string/buttonPlay"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonExitMaze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsMaze" />

    <Button
        android:id="@+id/buttonExitMaze"
        style="?buttonSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:fontFamily="monospace"
        android:onClick="exitMazeGame"
        android:text="@string/button_exit"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayMaze" />
</androidx.constraintlayout.widget.ConstraintLayout>